<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_lamp"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icon_alarm"
            android:title="@string/menu_reminders" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icon_add"
            android:title="@string/menu_new" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/icon_archive"
            android:title="@string/menu_archive" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/icon_trash"
                android:title="@string/menu_trash" />

        </menu>
    </item>

</menu>
