<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <data>
        <variable
            name="note"
            type="com.example.a2do.model.Note" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btn_reminders"
            android:background="@drawable/archive_icon"
            android:backgroundTint="@color/brownish_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.03">

        </Button>



        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YENİ NOT"
        android:id="@+id/txt_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/brownish_grey"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1">

    </TextView>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:background="@android:color/transparent"
        android:hint="@string/hint_header"
        android:id="@+id/edt_title"
        android:fontFamily="@font/raleway_medium"
        android:textColorHint="@color/charcoal_grey"
        android:padding="10dp"
        android:textSize="24sp"
        android:inputType="text"
        android:layout_margin="10dp">

    </EditText>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_header"
        app:layout_constraintStart_toStartOf="@+id/edt_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:background="@android:color/transparent"
        android:hint="@string/hint_note"
        android:id="@+id/edt_note"
        android:fontFamily="@font/raleway_regular"
        android:textColorHint="@color/charcoal_grey"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:inputType="text">

    </EditText>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/ll_reminders"
            app:layout_constraintTop_toBottomOf="@+id/txt_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintVertical_bias="0.7"
            android:weightSum="10"
            app:layout_constraintRight_toRightOf="parent">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/alarm">
                </ImageView>
            </RelativeLayout>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/hint_reminders"
                android:id="@+id/edt_reminders"
                android:fontFamily="@font/raleway_regular"
                android:textColorHint="@color/charcoal_grey"
                android:padding="10dp"
                android:textSize="16sp"
                android:inputType="text">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintVertical_bias="0.8"
            android:weightSum="10"
            app:layout_constraintRight_toRightOf="parent">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/location">
                </ImageView>
            </RelativeLayout>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="0.8"
                android:background="@android:color/transparent"
                android:hint="@string/hint_location"
                android:id="@+id/edt_location"
                android:fontFamily="@font/raleway_regular"
                android:textColorHint="@color/charcoal_grey"
                android:padding="10dp"
                android:textSize="16sp"
                android:inputType="text">

            </EditText>


        </LinearLayout>


        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/txt_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_bias="0.9"
        android:background="@android:color/transparent"
        android:text="KAYDET"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/brownish_grey">

    </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>